--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,17 @@
   	<servlet-class>servlets.ServletPrueba</servlet-class>
   </servlet>
   
-  
-  
+  <servlet>
+  	<servlet-name>MueblesServlet</servlet-name>
+  	<display-name>MueblesServlet</display-name>
+  	<description></description>
+  	<servlet-class>servlets.MueblesServlet</servlet-class>
+  	<init-param>
+  		<param-name>subtitle</param-name>
+  		<param-value>Subtitulo de la pagina</param-value>
+  	<description></description>
+  	</init-param>
+  </servlet>
   
   <servlet>
   	<servlet-name>FS</servlet-name>
